ER9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 1-11-2011
description here
====================================================================================

******************************************
CHANGELOG: 22-1-2012  ER
Menu changes for protocols
Enable light on by moving sticks
More elaborate sw warning

******************************************
CHANGELOG: 19-1-2012  & 12-1-2012 MPB
Add PXX and PPM16 protocols
Add Altitude Alarm
Various code shrinking

******************************************
CHANGELOG: 13-1-2012  & 12-1-2012 RFT
Trainer jack audio conflic fix

******************************************
CHANGELOG: 12-1-2012 MPB
FrSky internal alarm, code shrinking

******************************************
CHANGELOG: 12-1-2012 MPB
FrSky internal alarm, turn off external alarm
FrSky telemetry, add FUEL guage to display

******************************************
CHANGELOG: 12-1-2012  & 10-1-2012 RFT
Update to sound mapping to play red alarms over orange
and orange over yellow

******************************************
CHANGELOG: 12-1-2012  & 12-1-2012 ER
Allow hiding of owner name on splash screen

******************************************
CHANGELOG: 09-1-2012  & 10-1-2012 RFT
FRSky internal alarm scheduleding and sound mapping

******************************************
CHANGELOG: 8-1-2012  MPB
Frsky telemetry internal alarm scheduling
Frsky telemetry GPS Altitude display
DSM protocol implementation (Pat Mackenzie)
Fix default owner name and model name settings

******************************************
CHANGELOG: 7-1-2012 
Frsky telemetry fix

******************************************
CHANGELOG: 7-1-2012 
Added "Splash" marker to help eePe find the splash screen data
NEMA Changes

******************************************
CHANGELOG: 22-12-2011 MPB
Fix A2 on altitude telemetry display bug
